<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_container_background_color">


    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="@dimen/fader_balance_setting_text_container_width"
        android:layout_height="@dimen/fader_balance_setting_text_container_height"
        android:layout_marginTop="@dimen/fader_balance_setting_portlait_textContainer_marginTop"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        android:layout_centerHorizontal="true">
        <me.grantland.widget.AutofitTextView
            android:id="@+id/faderText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:paddingRight="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@android:color/white"
            android:text="Front 1"
            autofit:minTextSize="@dimen/min_text_size_8"
            android:textSize="@dimen/fader_balance_setting_text_size"
            />
        <me.grantland.widget.AutofitTextView
            android:id="@+id/balanceText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:fontFamily="sans-serif-light"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@android:color/white"
            autofit:minTextSize="@dimen/min_text_size_8"
            android:text="Right 0"
            android:textSize="@dimen/fader_balance_setting_text_size"
            />
    </LinearLayout>

    <jp.pioneer.carsync.presentation.view.widget.FaderBalanceGraphView
        android:id="@+id/faderBalanceGraph"
        android:layout_width="@dimen/fader_balance_setting_portlait_faderBalanceGraph_width"
        android:layout_height="@dimen/fader_balance_setting_portlait_faderBalanceGraph_height"
        android:layout_marginTop="@dimen/fader_balance_setting_portrait_faderBalanceGraph_marginTop"
        android:layout_centerHorizontal="true"
        android:background="@drawable/car_graph"
        />

    <RelativeLayout
        android:id="@+id/controlButtonContainer"
        android:layout_width="@dimen/fader_balance_setting_control_button_container_width"
        android:layout_height="@dimen/fader_balance_setting_control_button_container_width"
        android:layout_below="@id/faderBalanceGraph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fader_balance_setting_portlait_controlButtonContainer_marginTop">
        <jp.pioneer.carsync.presentation.view.widget.CustomButton
            android:id="@+id/centerPositionButton"
            android:layout_width="@dimen/fader_balance_setting_control_button_width"
            android:layout_height="@dimen/fader_balance_setting_control_button_width"
            android:layout_centerInParent="true"
            android:background="@drawable/fbiconbtn_center_sec"
            />
        <jp.pioneer.carsync.presentation.view.widget.CustomButton
            android:id="@+id/faderDownButton"
            android:layout_width="@dimen/fader_balance_setting_control_button_width"
            android:layout_height="@dimen/fader_balance_setting_control_button_width"
            android:layout_below="@+id/centerPositionButton"
            android:layout_marginTop="@dimen/fader_balance_setting_control_button_margin"
            android:layout_centerHorizontal="true"
            android:background="@drawable/fbiconbtn_down_sec"
            />
        <jp.pioneer.carsync.presentation.view.widget.CustomButton
            android:id="@+id/faderUpButton"
            android:layout_width="@dimen/fader_balance_setting_control_button_width"
            android:layout_height="@dimen/fader_balance_setting_control_button_width"
            android:layout_above="@+id/centerPositionButton"
            android:layout_marginBottom="@dimen/fader_balance_setting_control_button_margin"
            android:layout_centerHorizontal="true"
            android:background="@drawable/fbiconbtn_up_sec"
            />
        <jp.pioneer.carsync.presentation.view.widget.CustomButton
            android:id="@+id/balanceRightButton"
            android:layout_width="@dimen/fader_balance_setting_control_button_width"
            android:layout_height="@dimen/fader_balance_setting_control_button_width"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/centerPositionButton"
            android:layout_marginLeft="@dimen/fader_balance_setting_control_button_margin"
            android:background="@drawable/fbiconbtn_right_sec"
            />
        <jp.pioneer.carsync.presentation.view.widget.CustomButton
            android:id="@+id/balanceLeftButton"
            android:layout_width="@dimen/fader_balance_setting_control_button_width"
            android:layout_height="@dimen/fader_balance_setting_control_button_width"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/centerPositionButton"
            android:layout_marginRight="@dimen/fader_balance_setting_control_button_margin"
            android:background="@drawable/fbiconbtn_left_sec"
            />
    </RelativeLayout>
    <View
        android:id="@+id/disable_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.4"
        android:visibility="gone"/>

</RelativeLayout>